--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body>
       <nav>
       <a href="/">Bets</a>
+      <a href="/sportsbooks">Sportsbooks</a>
+      <a href="/sports">Sports</a>
+      <a href="/events">Events</a>
       <% if current_user != nil %>
         <a href="/users/sign_out">Sign out</a>
         <a href="/users/edit">Edit profile</a>
