--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -40,7 +40,7 @@
       </button>
       </form>
 
-      <% else %>
+      <% elsif params[:query_event_id].blank? %>
       <div>Sportsbook: <%= Sportsbook.find(params[:query_sportsbook_id]).name %></div>
       <div>Sport: <%= Sport.find(params[:query_sport_id]).name %></div>
       <form action="/insert_bet2" method="post">
@@ -77,7 +77,43 @@
         </label>
         <input type="text" id="stake_box" name="query_stake">
       </div>
+    <button>
+        Next
+      </button>
+    </form>
 
+    <% else %>
+  
+    <% odds = params.fetch("query_odds").to_f %>
+    <% stake = params.fetch("query_stake").to_f %>
+    <% if odds > 99 %>
+    <%   payout = stake*odds/100 %>
+    <%   implied_odds = 100/(odds+100) %>
+    <% elsif odds < -100 %>
+    <%   payout = stake*100/(-odds) %>
+    <%   implied_odds = (-odds)/(100-odds) %>
+    <% end %>
+    <% yield_roi = 100*payout/stake %>
+
+      <div>Sportsbook: <%= Sportsbook.find(params[:query_sportsbook_id]).name %></div>
+      <div>Sport: <%= Sport.find(params[:query_sport_id]).name %></div>
+      <div>Event: <%= Event.find(params[:query_event_id]).name %></div>
+      <div>Name: <%= params[:query_name] %></div>
+      <div>Odds: <%= params[:query_odds] %></div>
+      <div>Stake: <%= params[:query_stake] %></div>
+      <hr>
+      <div>Implied Odds: <%= implied_odds %></div>
+      <div>Payout: $<%= payout %></div>
+      <div>Yield: <%= yield_roi %>%</div>
+      <hr>
+      <form action="/insert_bet3" method="post">
+
+    <input type="hidden" name="query_sportsbook_id" value="<%= params[:query_sportsbook_id] %>">
+    <input type="hidden" name="query_sport_id" value="<%= params[:query_sport_id] %>">
+    <input type="hidden" name="query_event_id" value="<%= params[:query_event_id] %>">
+    <input type="hidden" name="query_name" value="<%= params[:query_name] %>">
+    <input type="hidden" name="query_odds" value="<%= params[:query_odds] %>">
+    <input type="hidden" name="query_stake" value="<%= params[:query_stake] %>">
       <div>
         <label for="status_menu">
           Status
@@ -89,12 +125,12 @@
       <% end %>
         </select>
       </div>
-
-      <button>
+    <button>
         Create bet
       </button>
     </form>
     <% end %>
+
   </div>
 </div>
 
