--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,8 +1,6 @@
 <div>
   <div>
-    <h1>
-      Sport #<%= @the_sport.id %> details
-    </h1>
+    <h1> <%= @the_sport.name %> </h1>
 
     <div>
       <div>
@@ -67,5 +65,12 @@
     </form>
   </div>
 </div>
+
+    <h2>Your Performance</h2>
+
+    <h2>Your Bets</h2>
+
+
+
 
 <hr>
