--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all sports
+      Your Sports
     </h1>
   </div>
 </div>
@@ -10,9 +10,7 @@
 
 <div>
   <div>
-    <h2>
-      Add a new sport
-    </h2>
+    <h2>Add a new sport</h2>
 
     <form action="/insert_sport" method="post">
       <div>
@@ -24,53 +22,38 @@
       </div>
 
       <button>
-        Create sport
+        Add sport
       </button>
     </form>
   </div>
 </div>
 
 <hr>
+<h2>Your performance by sport</h2>
+
 <div>
   <div>
     <table border="1">
       <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Name
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
+        <th>Name</th>
+        <th>Bets Placed</th>
+        <th>Bets Won</th>
+        <th>Bets Lost</th>
+        <th>Bets Pending</th>
+        <th>Balance</th>
+        <th>Yield</th>
+        <th></th>
       </tr>
 
       <% @list_of_sports.each do |a_sport| %>
       <tr>
-        <td>
-          <%= a_sport.id %>
-        </td>
-
-        <td>
-          <%= a_sport.name %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_sport.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_sport.updated_at) %> ago
-        </td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
+        <td><%= a_sport.name %></td>
 
         <td>
           <a href="/sports/<%= a_sport.id %>">
