--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -47,13 +47,14 @@
 
       <% @list_of_sports.each do |a_sport| %>
       <tr>
+        <% bets = Bet.joins(:sport).where(sports: { id: a_sport.id }) %>
         <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
-        <td><%= a_sport.name %></td>
+        <td><%= bets.count %></td>
+        <td><%= Bet.count_by_status(bets, "won") %></td>
+        <td><%= Bet.count_by_status(bets, "lost") %></td>
+        <td><%= Bet.count_by_status(bets, "pending") %></td>
+        <td>$ <%= Bet.total_balance(bets).round(2) %></td>
+        <td><%= Bet.total_yield(bets).round(1) %> % </td>
 
         <td>
           <a href="/sports/<%= a_sport.id %>">
