--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -61,6 +61,13 @@
         <input type="text" id="name_box" name="query_name" value="<%= @the_event.name %>">
       </div>
 
+      <div>
+        <label for="date_box">
+          Date
+        </label>
+        <input type="date" id="date_box" name="query_date" value="<%= @the_event.date %>">
+      </div>
+
       <button>
         Update event
       </button>
