--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -31,7 +31,7 @@
       </div>
       <div>
         <label for="date_box">
-          Name
+          Date
         </label>
         <input type="date" id="date_box" name="query_date">
       </div>
