--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -44,18 +44,18 @@
   </div>
 </div>
 <hr>
-<h2>Your Performance</h2>
+<h2>Your performance</h2>
 
    <% bets = Bet.joins(:sport).where(sports: { id: @the_sport.id }) %>
    <div>Total Balance: <strong>$ <%= Bet.total_balance(bets).round(2) %></strong> </div>
    <div>Yield: <strong><%= Bet.total_yield(bets.where.not(status: 'pending')).round(1) %> %</strong> </div>
-   <div>Bets Placed: <strong><%= Bet.count %></strong> </div>
+   <div>Bets Placed: <strong><%= bets.count %></strong> </div>
    <div>Bets Won: <strong><%= Bet.count_by_status(bets, "won") %></strong></div>
    <div>Bets Lost: <strong><%= Bet.count_by_status(bets, "lost") %></strong> </div>
    <div>Bets Pending: <strong><%= Bet.count_by_status(bets, "pending") %></strong></div>
 
 <hr>
-    <h2>Your Bets</h2>
+    <h2>Your bets</h2>
 
 <div>
   <div>
@@ -81,7 +81,11 @@
         <td><%= a_bet.odds %></td>
         <td>$ <%= a_bet.stake %></td>
         <td><%= a_bet.status.humanize %></td>
+        <% if a_bet.payout == 0%>
+        <td>-</td>
+        <% else %>
         <td>$ <%= a_bet.payout.round(2) %></td>
+        <% end %>
         <td><%= time_ago_in_words(a_bet.created_at) %> ago</td>
 
         <td>
@@ -94,7 +98,5 @@
     </table>
   </div>
 </div>
-    
-
 
 <hr>
