--- a/app/views/bets/show.html.erb
+++ b/app/views/bets/show.html.erb
@@ -3,9 +3,9 @@
     <h1>
       <%= @the_bet.name %>
     </h1>
-    <h2>
+    <h3>
       at <%= @the_bet.event.name %> 
-    </h2>
+    </h3>
 
     <div>
       <div>
@@ -23,7 +23,7 @@
 <hr>
 <div>Sportsbook: <strong> <%= @the_bet.sportsbook.name %> </strong> </div>
 <div>Odds: <strong> <%= @the_bet.odds %> </strong> </div>
-<div>Stake: <strong> <%= @the_bet.stake %> </strong> </div>
+<div>Stake: <strong> $ <%= @the_bet.stake %> </strong> </div>
 <div>Created at: <strong> <%= time_ago_in_words(@the_bet.created_at) %> ago </strong> </div>
 <hr>
 <div>Status: <strong> <%= @the_bet.status.humanize %> </strong> </div>
@@ -59,10 +59,17 @@
 
       <div>
         <label for="odds_box">
-          Odds
+          Odds (American-style)
         </label>
 
-        <input type="text" id="odds_box" name="query_odds" value="<%= @the_bet.odds %>">
+        <input type="number" id="odds_box" name="query_odds" value="<%= @the_bet.odds %>">
+      </div>
+
+      <div>
+        <label for="stake_box">
+          Stake
+        </label>
+        <input type="number" id="stake_box" name="query_stake" value="<%= @the_bet.stake %>">
       </div>
 
       <div>
