--- a/app/views/sportsbooks/show.html.erb
+++ b/app/views/sportsbooks/show.html.erb
@@ -47,19 +47,19 @@
 </div>
 <hr>
 
-<h2>Your Performance</h2>
+<h2>Your performance</h2>
 
 <% bets = Bet.where(sportsbook: @the_sportsbook.id) %>
    <div>Total Balance: <strong>$ <%= Bet.total_balance(bets).round(2) %></strong> </div>
    <div>Yield: <strong><%= Bet.total_yield(bets.where.not(status: 'pending')).round(1) %> %</strong> </div>
-   <div>Bets Placed: <strong><%= Bet.count %></strong> </div>
+   <div>Bets Placed: <strong><%= bets.count %></strong> </div>
    <div>Bets Won: <strong><%= Bet.count_by_status(bets, "won") %></strong></div>
    <div>Bets Lost: <strong><%= Bet.count_by_status(bets, "lost") %></strong> </div>
    <div>Bets Pending: <strong><%= Bet.count_by_status(bets, "pending") %></strong></div>
 
 <hr>
 
-<h2>Your Bets</h2>
+<h2>Your bets</h2>
 
 <div>
   <div>
@@ -85,7 +85,11 @@
         <td><%= a_bet.odds %></td>
         <td>$ <%= a_bet.stake %></td>
         <td><%= a_bet.status.humanize %></td>
+        <% if a_bet.payout == 0%>
+        <td>-</td>
+        <% else %>
         <td>$ <%= a_bet.payout.round(2) %></td>
+        <% end %>
         <td><%= time_ago_in_words(a_bet.created_at) %> ago</td>
 
         <td>
